// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Footer Harmonised Group 2 renders correctly 1`] = `
<footer
  class="ecl-footer-harmonised--group1 ecl-footer-harmonised"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  />
</footer>
`;

exports[`EC - Footer Harmonised Group 2 renders correctly with extra attributes 1`] = `
<footer
  class="ecl-footer-harmonised--group1 ecl-footer-harmonised"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  />
</footer>
`;

exports[`EC - Footer Harmonised Group 2 renders correctly with extra class names 1`] = `
<footer
  class="ecl-footer-harmonised--group1 ecl-footer-harmonised"
>
  <div
    class="ecl-container ecl-footer-harmonised__container"
  />
</footer>
`;
